# winocr

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  winocr.py
