[metadata]
name = winocr
version = 0.0.1
author = Tomofumi Inoue
author_email = funaox@gmail.com
description = Windows.Media.Ocr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GitHub30/winocr
project_urls =
    Bug Tracker = https://github.com/GitHub30/winocr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
py_modules = winocr
install_requires =
    winrt

[options.entry_points]
console_scripts =
    winocr_serve = winocr:serve
